# voicevox_engine_cpp

./: CMakeLists.txt  Makefile  README.md  debug.sh
src/: Makefile  cancellable_engine.h  defines.h  engine_manifest.h  json_parser.cc  json_parser.h  main.cc  main.h  model.cc  model.h  resource_manager.h  server.cc  util.cc  util.h
src/app/: application.cc  application.h
src/app/routers/: character.cc  character.h  engine_info.h  library.h  morphing.h  portal_page.h  preset.h  setting.h  tts_pipeline.cc  tts_pipeline.h  user_dict.h
src/core/: core_adapter.cc  core_adapter.h  core_initializer.cc  core_initializer.h  core_wrapper.cc  core_wrapper.h
src/dev/core/: mock.h
src/dev/tts_engine/: mock.h
src/libraries/: AudioFile.h  base64.hpp
src/metas/: metas.h  metas_store.h
src/morphing/: model.h  morphing.h
src/open_jtalk/: main.cc  open_jtalk.cc  open_jtalk.h
src/open_jtalk/jpcommon/: jpcommon.cc  jpcommon.h  jpcommon_label.cc  jpcommon_node.cc  jpcommon_rule_utf_8.h
src/open_jtalk/mecab/: char_property.cc  char_property.h  common.h  config.h  connector.cc  connector.h  context_id.cc  context_id.h  darts.h  dictionary.cc  dictionary.h  dictionary_rewriter.cc  dictionary_rewriter.h  feature_index.cc  feature_index.h  freelist.h  lbfgs.cc  lbfgs.h  learner_node.h  learner_tagger.cc  learner_tagger.h  mecab.cc  mecab.h  mmap.h  nbest_generator.cc  nbest_generator.h  param.cc  param.h  scoped_ptr.h  stream_wrapper.h  string_buffer.cc  string_buffer.h  tagger.cc  thread.h  tokenizer.cc  tokenizer.h  ucs.h  utils.cc  utils.h  viterbi.cc  (+4 more)
src/open_jtalk/mecab2njd/: mecab2njd.cc  mecab2njd.h
src/open_jtalk/njd/: njd.cc  njd.h  njd_node.cc
src/open_jtalk/njd2jpcommon/: njd2jpcommon.cc  njd2jpcommon.h  njd2jpcommon_rule_utf_8.h
src/open_jtalk/njd_set_accent_phrase/: njd_set_accent_phrase.cc  njd_set_accent_phrase.h  njd_set_accent_phrase_rule_utf_8.h
src/open_jtalk/njd_set_accent_type/: njd_set_accent_type.cc  njd_set_accent_type.h  njd_set_accent_type_rule_utf_8.h
src/open_jtalk/njd_set_digit/: njd_set_digit.cc  njd_set_digit.h  njd_set_digit_rule_utf_8.h
src/open_jtalk/njd_set_long_vowel/: njd_set_long_vowel.cc  njd_set_long_vowel.h  njd_set_long_vowel_rule_utf_8.h
src/open_jtalk/njd_set_pronunciation/: njd_set_pronunciation.cc  njd_set_pronunciation.h  njd_set_pronunciation_rule_utf_8.h
src/open_jtalk/njd_set_unvoiced_vowel/: njd_set_unvoiced_vowel.cc  njd_set_unvoiced_vowel.h  njd_set_unvoiced_vowel_rule_utf_8.h
src/open_jtalk/text2mecab/: text2mecab.cc  text2mecab.h  text2mecab_rule_utf_8.h
src/preset/: model.h  preset_manager.h
src/setting/: model.h  setting_manager.h
src/tts_pipeline/: connect_base64_waves.cc  connect_base64_waves.h  kana_converter.cc  kana_converter.h  model.cc  model.h  mora_mapping.cc  mora_mapping.h  phoneme.cc  phoneme.h  text_analyzer.cc  text_analyzer.h  tts_engine.cc  tts_engine.h
src/user_dict/: model.h  user_dict_manager.h  user_dict_word.h
src/utility/: core_version_utility.cc  core_version_utility.h  file_utility.cc  file_utility.h  model.cc  model.h  path_utility.cc  path_utility.h  runtime_utility.cc  runtime_utility.h
